<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/gradient_backgroud"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/gameName"
        android:textStyle="bold"
        android:fontFamily="@font/dancingbold"
        android:textSize="60sp"
        android:textColor="@color/blueTheme"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="120dp"
            android:maxHeight="120dp"
            android:layout_gravity="center"
            android:src="@drawable/profile"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/perfil"
            android:fontFamily="sans-serif"
            android:textSize="18sp"
            android:textColor="@color/cardview_dark_background"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="50dp">

        <Button
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:text="@string/novoJogo"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:onClick="novoJogo"/>

        <Button
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif"
            android:onClick="perfil"
            android:text="@string/perfil"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif"
            android:text="@string/top_score"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <Button
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif"
            android:text="@string/creditos"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:onClick="creditos"/>

        <Button
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif"
            android:text="@string/sair"
            android:textColor="@color/black"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>